# obs-setlist-plugin

./: CMakeLists  CMakeLists.txt  README.md  setlist-plugin.cpp  setlist-source.cpp  setlist-source.hpp
